--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>  
 
 <html>  
-<head> testing
+<head> test1
     <meta charset = "utf-8"> 
     <title>InnovationMiner</title>
     <link rel="icon" href="https://vip.innovationmining.top/erc/images/favicon.ico">
